@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2799497 by drunken monkey: Added a getter for the Views query's "where"
+  property.
 - #2574583 by drunken monkey: Fixed loading of entities from excluded bundles.
 - #2795861 by sinn: Removed some deprecated methods.
 - #2748323 by sinn: Fixed comment reference to removed method
